@@ -113,8 +113,16 @@ static int proc_was_listed(proc_t *buf){
     break; case SEL_TTY : return_if_match(rSv(TTY, s_int, buf),tty);
     break; case SEL_SESS: return_if_match(rSv(ID_SESSION, s_int, buf),pid);
 
-    break; case SEL_COMM: i=sn->n; while(i--)
-    if(!strncmp( rSv(CMD, str, buf), (*(sn->u+i)).cmd, 63 )) return 1;
+    break;
+    case SEL_COMM:
+        i=sn->n;
+        while(i--) {
+            /* special case, comm is 16 characters but match is longer */
+            if (strlen(rSv(CMD, str, buf)) == 15 && strlen((*(sn->u+i)).cmd) >= 15)
+                if(!strncmp( rSv(CMD, str, buf), (*(sn->u+i)).cmd, 15 )) return 1;
+            if(!strncmp( rSv(CMD, str, buf), (*(sn->u+i)).cmd, 63 )) return 1;
+        }
+
 
 #undef return_if_match
 
